--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.RentalAgreement</groupId>
-    <artifactId>RentalAgreement</artifactId>
+    <groupId>org.ToolRentApp</groupId>
+    <artifactId>ToolRentApp</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -36,6 +36,12 @@
             <version>5.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -51,7 +57,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.RentalAgreement.Main</mainClass>
+                            <mainClass>org.ToolRentApp.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
