--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.9</version>
+            <artifactId>commons-text</artifactId>
+            <version>1.10.0</version>
         </dependency>
 
     </dependencies>
